feat:增加分组管理的14个接口显示
